--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     </header>
 
     <main>
-        <form autocomplete="off" onsubmit="return false;">
+        <form autocomplete="off" onsubmit="addTask(); return false;">
             <label>
                 <input id="new-todo" name="todo" type="text" placeholder="new todo" />
             </label>
             <select id="user-todo" name="user">
                 <option disabled selected>select user</option>
             </select>
-            <button onclick="addTask()">Add Todo</button>
+            <button>Add Todo</button>
         </form>
         <ul id="todo-list" class="todo-list"></ul>
     </main>
